--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ beautifulsoup4==4.14.3
 certifi==2026.1.4
 cffi==2.0.0
 charset-normalizer==3.4.4
+click==8.3.1
 curl_cffi==0.13.0
 distro==1.9.0
 docstring_parser==0.17.0
@@ -15,6 +16,8 @@ httpx==0.28.1
 idna==3.11
 iniconfig==2.3.0
 jiter==0.13.0
+markdown-it-py==4.0.0
+mdurl==0.1.2
 multitasking==0.0.12
 numpy==2.4.2
 packaging==26.0
@@ -31,10 +34,14 @@ pytest==9.0.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytz==2025.2
+PyYAML==6.0.3
 requests==2.32.5
+rich==14.3.2
+shellingham==1.5.4
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.8.3
+typer==0.21.1
 typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.6.3
